--- a/career.html
+++ b/career.html
@@ -31,6 +31,8 @@
 <link rel="stylesheet" href="./assets/css/slick-theme.css">
 <link rel="stylesheet" href="./assets/css/aos.css">
 <link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="./assets/css/style.ar.css" />
+
 
 <!-- FancyBox -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
@@ -169,14 +171,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                 <h4 data-aos="fade-up" data-aos-duration="900">Join Our Team at Momkn: Explore Rewarding <br>Career Opportunities </h4>
                 <p data-aos="fade-up" data-aos-duration="1100">Explore the myriad opportunities awaiting you at Momkn, where our dynamic <br> workplace is not just a job but a journey. Immerse yourself in a culture <br>committed to fostering innovation and continuous growth. Uncover your <br>potential as we collectively shape the future and create meaningful impact. <br> Join us in building a  career that goes beyond conventional boundaries,<br>
                    embracing challenges, and unlocking new horizons. Your journey begins here.</p>
-                
               </div>
-              <div class="col-md-5 box-career" style="margin-top: 18%;" data-aos="fade-up" data-aos-duration="500">
+              <div class="col-md-5 box-career" data-aos="fade-up" data-aos-duration="500">
                 <h2 data-aos="fade-up" data-aos-duration="700">Sign up to get job updates directly to your inbox!</h2>
                 <div class="form-group " >
-                  <input type="email" class="form-control email-input mb-3"style="border-radius: 84px; " data-aos="fade-up" data-aos-duration="900" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email">
+                  <input type="email" class="form-control email-input "style="border-radius: 84px; " data-aos="fade-up" data-aos-duration="900" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email">
                 </div>
-                <a href="https://example.com/destination" class="btn btn-subscribe mb-3" data-aos="fade-up" data-aos-duration="1100" style="padding: 12px; border-radius: 84px;">Subscribe</a>
+                <a href="https://example.com/destination" class="btn btn-subscribe mt-3" data-aos="fade-up" data-aos-duration="1100" style="padding: 12px; border-radius: 84px;">Subscribe</a>
               </div>
             </div>
           </div>
@@ -594,7 +595,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
      
         <h2 data-aos="fade-up" data-aos-duration="800">Trusted by thousands of businesses.</h2>
         <div class="brands-row row mt-5" data-aos="fade-up" data-aos-duration="900">
-          <img src="assets/images/talabat.png" alt="Brand 1" class="img-brand">
+          <img src="assets/images/talgabat.pn" alt="Brand 1" class="img-brand">
           <img src="assets/images/we.png" alt="Brand 2" class="img-brand">
           <img src="assets/images/yacoub.png" alt="Brand 3" class="img-brand">
           <img src="assets/images/pr-card.png" alt="Brand 4" class="img-brand">
