--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,8 @@
 <link rel="stylesheet" href="./assets/css/slick-theme.css">
 <link rel="stylesheet" href="./assets/css/aos.css">
 <link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="./assets/css/style.ar.css" />
+
 
 <!-- FancyBox -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
@@ -174,7 +176,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
                     <div class="contact-item">
                         <div class="contact-icons">
-                            <img src="assets/images/message-svg.svg" data-aos="fade-up" data-aos-duration="1000" alt="Image" >
+                            <img src="assets/images/telefon.svg" data-aos="fade-up" data-aos-duration="1000" alt="Image" >
                         </div>
                         <div class="contact-info">
                             <h3 data-aos="fade-up" data-aos-duration="1000">Phone</h3>
@@ -184,7 +186,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
                     <div class="contact-item mb-2">
                         <div class="contact-icons">
-                            <img src="assets/images/message-svg.svg" data-aos="fade-up" data-aos-duration="1000" alt="Image" >
+                            <img src="assets/images/location-svg.svg" data-aos="fade-up" data-aos-duration="1000" alt="Image" >
                         </div>
                         <div class="contact-info">
                             <h3 data-aos="fade-up" data-aos-duration="1000">Address</h3>
