--- a/errorpage.html
+++ b/errorpage.html
@@ -31,6 +31,8 @@
 <link rel="stylesheet" href="./assets/css/slick-theme.css">
 <link rel="stylesheet" href="./assets/css/aos.css">
 <link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="./assets/css/style.ar.css" />
+
 
 <!-- FancyBox -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
@@ -187,7 +189,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
       <!-- Footer section -->
-      <footer class="footer footer-errorpage" style="margin-top:15.4%;">
+      <footer class="footer" style="margin-top:15.4%;">
         <div class="container-fluid p-100">
           <div class="row footer-bot">
             <div class="footer-logo col-md-3 col-lg-2">
