--- a/indgovernment.html
+++ b/indgovernment.html
@@ -31,6 +31,8 @@
 <link rel="stylesheet" href="./assets/css/slick-theme.css">
 <link rel="stylesheet" href="./assets/css/aos.css">
 <link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="./assets/css/style.ar.css" />
+
 
 <!-- FancyBox -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
@@ -447,7 +449,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
           <img src="assets/images/orange.png" alt="Brand 9" class="img-brand">
         </div>
       </div>
-      </section>
+  </section>
     
   
    
