--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -31,6 +31,8 @@
 <link rel="stylesheet" href="./assets/css/slick-theme.css">
 <link rel="stylesheet" href="./assets/css/aos.css">
 <link rel="stylesheet" href="./assets/css/style.css" />
+<link rel="stylesheet" href="./assets/css/style.ar.css" />
+
 
 <!-- FancyBox -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.css">
