--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
               
               <div class="consumer-features">
                 <ul class="list-unstyled column-two ml-5">
-                  <li><a href="#"><i class="fa-solid fa-caret-right mr-2 p-2" style="margin-left: 3rem;"></i>Careers</a></li>
+                  <li><a href="#"><i class="fa-solid fa-caret-right mr-2 p-2 carrer-nav-left" ></i>Careers</a></li>
                 </ul>
             </div>
           </div>
