--- a/career.html
+++ b/career.html
@@ -173,7 +173,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                    embracing challenges, and unlocking new horizons. Your journey begins here.</p>
               </div>
               <div class="col-md-5 box-career" data-aos="fade-up" data-aos-duration="500">
-                <h2 data-aos="fade-up" data-aos-duration="700">Sign up to get job updates directly to your inbox!</h2>
+                <h2 data-aos="fade-up" data-aos-duration="700">Sign up to get job updates directly to your inbox!  Sign up to get job updates directly to your inbox!</h2>
                 <div class="form-group " >
                   <input type="email" class="form-control email-input "style="border-radius: 84px; " data-aos="fade-up" data-aos-duration="900" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email">
                 </div>
