--- a/PointofSales.html
+++ b/PointofSales.html
@@ -157,18 +157,17 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 
 
-
-
   <div class="governmental-header">
     <div class="governmental">
-      <div class="governmental-item" style="position: relative; overflow: hidden;">
-        <img src="assets/images/pointofslaes-header.jpeg" class="governmental_bg" style="height: 665px;"alt="">
-        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 665px; background: #000000B2; z-index: 0;"></div>
-        <div class="img-content-sales col-md-9 mt-5" style=" z-index: 1;">
+      <div class="governmental-item" >
+        <div class="governmental_bg" style="background-image: url('assets/images/pointofslaes-header.jpeg'); ">
+          <div class="header-image-overlay"></div>
+        <div class="img-content-sales col-md-11 mt-5">
           <a href="#" class="for-business-bot">Payment Solution</a>
           <h3 data-aos="fade-up" data-aos-duration="700">Point of sales</h3>
           <h4 data-aos="fade-up" data-aos-duration="800">Send and Accept Payments</h4>
-          <p data-aos="fade-up" data-aos-duration="900">Enable your customers to conveniently settle bills anytime, anywhere using Momkn's point of sale. Whether it's topping up gas cards, paying utility bills, tuition fees, purchasing online games, booking rides, or more, offer a seamless payment experience.
+          <p data-aos="fade-up" data-aos-duration="900" >Enable your customers to conveniently settle bills anytime, anywhere using Momkn's point of sale. Whether it's topping up gas cards, paying utility bills, tuition fees, purchasing online games, 
+            booking rides, or more, offer a seamless payment experience.
             Let your customers pay with ease using either cash or debit/credit cards, providing them with a wide range of payment options to suit their preferences.
             Facilitate the withdrawal of loans, grants, and payouts for your customers, helping them streamline their financial transactions with efficiency and convenience.</p>
           <div class="gov-buttons-header">
