--- a/consumer.html
+++ b/consumer.html
@@ -160,14 +160,14 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <div class="governmental-header">
     <div class="governmental">
-      <div class="governmental-item" style="position: relative; overflow: hidden;">
-        <img src="assets/images/pointofslaes-header.jpeg" class="governmental_bg" style="height: 665px;"alt="">
-        <div style="position: absolute; top: 0; left: 0; width: 100%; height: 665px; background: #000000B2; z-index: 0;"></div>
-        <div class="img-content-sales col-md-9 mt-5" style=" z-index: 1;">
+      <div class="governmental-item" >
+        <div class="governmental_bg" style="background-image: url('assets/images/pointofslaes-header.jpeg'); ">
+          <div class="header-image-overlay"></div>
+        <div class="img-content-sales col-md-10 mt-5">
           <a href="#" class="for-business-bot">For Consumer</a>
           <h3 data-aos="fade-up" data-aos-duration="700">Consumer Services</h3>
           <h4 data-aos="fade-up" data-aos-duration="800">Lorem ipsum dolor sit amet</h4>
-          <p data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur. Gravida proin volutpat sed magna mattis. Nunc in varius nisi condimentum vulputate tortor bibendum nisl. Lacus platea massa lobortis malesuada in diam euismod sed nisi. Elit consectetur sed quis ante amet id tortor mauris. Praesent condimentum turpis quisque aliquet elementum pretium sed. Imperdiet congue pulvinar a ipsum vivamus turpis commodo. Vitae duis cursus parturient fermentum morbi purus. Eu et elementum eget mattis at. Libero vel molestie ac arcu.</p>
+          <p data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur. Gravida proin volutpat sed magna mattis. Nunc in varius nisi condimentum vulputate tortor bibendum nisl. Lacus platea massa lobortis malesuada in diam euismod sed nisi. Elit consectetur sed quis ante amet id tortor mauris. Praesent condimentum turpis quisque aliquet elementum pretium sed. Imperdiet congue pulvinar a ipsum vivamus turpis commodo. Vitae duis cursus parturient fermentum morbi purus. Eu et elementum eget mattis at. Libero vel molestie ac arcu. Lorem ipsum dolor sit amet consectetur. Gravida proin volutpat sed magna mattis. Nunc in varius nisi condimentum vulputate tortor bibendum nisl. Lacus platea massa lobortis malesuada in diam euismod sed nisi. Elit consectetur sed quis ante amet id tortor mauris. Praesent condimentum turpis quisque aliquet elementum pretium sed. Imperdiet congue pulvinar a ipsum vivamus turpis commodo. Vitae duis cursus parturient fermentum morbi purus. Eu et elementum eget mattis at. Libero vel molestie ac arcu.</p>
           <div class="gov-buttons-header">
             <a href="#" class="bot-started-gov">Get Started</a>
             <a href="#" class="contact-us-gov">Contact Us</a>
@@ -177,6 +177,8 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     </div>
   </div>
   
+
+
 
 
 
