--- a/indgovernment.html
+++ b/indgovernment.html
@@ -159,14 +159,14 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   <div class="governmental-header">
     <div class="governmental ">
       <div class="governmental-item">
-         <div class="governmental_bg" style="background-image: url('assets/images/testoverlay.jpg');" >
+         <div class="governmental_bg" style="background-image: url('assets/images/bus-gov-bg.jpeg'); " >
           <div class="header-image-overlay"></div>
             <div class="img-content col-md-11 ">
               <a href="#" class="for-business-bot">For Business</a>
               <h3 data-aos="fade-up" data-aos-duration="700">GOVERNMENTAL</h3>
               <h4 data-aos="fade-up" data-aos-duration="800">Reduce traffic and process payments faster.</h4>
               <p data-aos="fade-up" data-aos-duration="900">Offer easy, fast & secure payment options to the public with Momkn’s distinguished 
-                portfolio of payment solutions that caters to all offline & online government obligations & services.</p>
+                portfolio of payment solutions that caters to all offline & online government obligations & services. </p>
                 <div class="gov-buttons-header">
                   <a href="#" class="bot-started-gov">Get Started</a>
                   <a href="#" class="contact-us-gov ">Contact Us</a>
