search input updated

--- a/PointofSales.html
+++ b/PointofSales.html
@@ -160,7 +160,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   <div class="governmental-header">
     <div class="governmental">
       <div class="governmental-item" >
-        <div class="governmental_bg" style="background-image: url('assets/images/pointofslaes-header.jpeg'); ">
+        <div class="governmental_bg" style="background-image: url('assets/images/Pointofsales.jpg'); background-position: right;">
           <div class="header-image-overlay"></div>
         <div class="img-content-sales col-md-11 mt-5">
           <a href="#" class="for-business-bot">Payment Solution</a>
