--- a/indgovernment.html
+++ b/indgovernment.html
@@ -159,7 +159,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   <div class="governmental-header">
     <div class="governmental ">
       <div class="governmental-item">
-         <div class="governmental_bg" style="background-image: url('assets/images/bus-gov-bg.jpeg'); " >
+         <div class="governmental_bg" style="background-image: url('assets/images/government-bg.jpg'); " >
           <div class="header-image-overlay"></div>
             <div class="img-content col-md-11 ">
               <a href="#" class="for-business-bot">For Business</a>
@@ -177,8 +177,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     </div>
   </div>
 
-    
-
+ 
 
 
 
