--- a/Mnews.html
+++ b/Mnews.html
@@ -50,8 +50,8 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Al-Ahly Momken-Media News</title>
 </head>
 
-<body style="background-image: url('assets/images/media-news-bg.png'); background-size: cover; background-position: center;">
-  <div style="background-color: rgba(255, 255, 255, 0);">
+<body style="background-image: url('assets/images/News-bg.webp'); background-size: cover; background-position: center;">
+
 
   
   
