--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -407,43 +407,49 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   
 
 
-
 <!-- Pagination -->
 <div class="container-fluid p-100">
   <div class="pagination-container mt-4">
     <nav aria-label="Page navigation" class="w-100">
       <ul class="pagination justify-content-between mx-auto">
-        <li class="page-item previous disabled no-hover"> 
-          <span class="page-link" aria-label="Previous">
-            <span aria-hidden="true"><i class="fa-solid fa-arrow-left disabled"></i></span>
-            <span class="pagination-word-left left disabled">Previous</span>
-          </span>
+        <li class="page-item previous"> 
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
+            <span class="pagination-word-left left">Previous</span>
+          </a>
         </li>
-        <li class="page-item active" data-aos="fade-up" data-aos-duration="400"><a class="number" href="#">1</a></li>
-        <li class="page-item" data-aos="fade-up" data-aos-duration="600"><a class="number" href="#">2</a></li>
-        <li class="page-item" data-aos="fade-up" data-aos-duration="800"><a class="number" href="#">3</a></li>
-        <li class="page-item disabled" data-aos="fade-up" data-aos-duration="900"><span class="number">...</span></li>
-        <li class="page-item" data-aos="fade-up" data-aos-duration="1000"><a class="number" href="#">8</a></li>
-        <li class="page-item" data-aos="fade-up" data-aos-duration="1200"><a class="number" href="#">9</a></li>
-        <li class="page-item" data-aos="fade-up" data-aos-duration="1400"><a class="number" href="#">10</a></li>
-        <li class="page-item next">
+        <li class="page-item ">
+          <a class="number " href="#">1</a>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">2</a>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">3</a>
+        </li>
+        <li class="page-item disabled">
+          <span class="number">...</span>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">8</a>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">9</a>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">10</a>
+        </li>
+        <li class="page-item next ">
           <a class="page-link" href="#" aria-label="Next">
             <span aria-hidden="true"></span>
-            <span class="pagination-word-right right active">Next</span>
-            <i class="fa-solid fa-arrow-right "></i>
+            <span class="pagination-word-right right ">Next</span>
+            <i class="fa-solid fa-arrow-right"></i>
           </a>
         </li>
       </ul>
     </nav>
   </div>
 </div>
-
-
- 
-
-
-
-
 
 
 
