--- a/indgovernment.html
+++ b/indgovernment.html
@@ -224,7 +224,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
       <img src="assets/images/sec3-gov.png" alt="image" class="gov-img"data-aos="fade-up" data-aos-duration="1000">
   </div>
    
-    <div class="col-md-6 payment-for-gov " style="margin-top: 11%; padding-left: 65px" >
+    <div class="col-md-6 payment-for-gov " style="margin-top: 11%; padding-left: 65px; padding-right: 65px;" >
       
       <h3 class="momken-payment-title mt-4"data-aos="fade-up" data-aos-duration="1000">Service  Applications </h3>
       <p class="momken-payment-text mt-4"data-aos="fade-up" data-aos-duration="1000">Lorem ipsum dolor sit amet consectetur. Quis viverra <br>faucibus eu malesuada porta et.
