--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -412,12 +412,13 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   <div class="pagination-container mt-4">
     <nav aria-label="Page navigation" class="w-100">
       <ul class="pagination justify-content-between mx-auto">
-        <li class="page-item previous"> 
-          <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
-            <span class="pagination-word-left left">Previous</span>
-          </a>
+        <li class="page-item previous disabled">
+            <a class="page-link" href="#" aria-label="Previous">
+                <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
+                <span class="pagination-word-left left">Previous</span>
+            </a>
         </li>
+        
         <li class="page-item ">
           <a class="number " href="#">1</a>
         </li>
@@ -439,7 +440,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <li class="page-item">
           <a class="number" href="#">10</a>
         </li>
-        <li class="page-item next ">
+        <li class="page-item next active">
           <a class="page-link" href="#" aria-label="Next">
             <span aria-hidden="true"></span>
             <span class="pagination-word-right right ">Next</span>
