--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
 
@@ -484,11 +484,11 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   <div class="row ">
     <div class="col-md-6 pl-130">
       <div class="main-image mt-4 "data-aos="fade-up"
-      data-aos-anchor-placement="top-center" >
+      data-aos-anchor-placement="top-center" data-aos-duration="1000" data-aos-delay="0" >
         <img src="assets/images/mobile.png" class="large-image" alt="">
         <div class="small-image-container">
           <div class="row first images">
-            <div class="col-3"data-aos="fade-right" data-aos-duration="300" data-aos-delay="0">
+            <div class="col-3"data-aos="fade-right" data-aos-duration="300" >
               <img src="assets/images/green ball.png"class=" first-img " style="width: 100px; height: 100px;";alt="Small Image 1">
             </div>
             
