--- a/career.html
+++ b/career.html
@@ -177,7 +177,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                    embracing challenges, and unlocking new horizons. Your journey begins here.</p>
               </div>
               <div class="col-md-5 box-career" data-aos="fade-up" data-aos-duration="500">
-                <h2 data-aos="fade-up" data-aos-duration="700">Sign up to get job updates directly to your inbox!  Sign up to get job updates directly to your inbox!</h2>
+                <h2 data-aos="fade-up" data-aos-duration="700">Sign up to get job updates directly to your inbox! </h2>
                 <div class="form-group " >
                   <input type="email" class="form-control email-input "style="border-radius: 84px; " data-aos="fade-up" data-aos-duration="900" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter your email">
                 </div>
@@ -201,9 +201,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
           <img src="assets/images/category-2.svg" alt="Category" class="category-icon ml-3 "> <span id="selectedCategory">All Categories</span>
           <img src="assets/images/arrow-circle-down.svg" alt="Dropdown" class="dropdown-icon">
           <select class="category-dropdown" size="3" onchange="updateSelectedCategory(this)"> 
-              <option value="1">Category 1</option>
-              <option value="2">Category 2</option>
-              <option value="3">Category 3</option>
+              <option value="1" class="options">Category 1</option>
+              <option value="2" class="options">Category 2</option>
+              <option value="3" class="options">Category 3</option>
           </select>
       </div>
         <a href="your-link-here" class="word search-word" data-aos="fade-up" data-aos-duration="1100">SEARCH</a>
