--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -257,7 +257,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </a>        
         <a href="YOUR_URL_HERE">
           <div class="img-podcast-magazine-content">
-              <h5 data-aos="fade-up" data-aos-duration="1000">Podcast Podcast Podcast</h5>
+              <h5 data-aos="fade-up" data-aos-duration="1000">Podcast Podcast Podcast Podcast</h5>
               <h4 data-aos="fade-up" data-aos-duration="1000" >EP 01 Podcast Podcast</h4>
           </div>
       </a>    
