--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -257,8 +257,8 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         </a>        
         <a href="YOUR_URL_HERE">
           <div class="img-podcast-magazine-content">
-              <h5 data-aos="fade-up" data-aos-duration="1000">Podcast Podcast Podcast Podcast</h5>
-              <h4 data-aos="fade-up" data-aos-duration="1000" >EP 01 Podcast Podcast</h4>
+              <h5 data-aos="fade-up" data-aos-duration="1000">Podcast</h5>
+              <h4 data-aos="fade-up" data-aos-duration="1000" >EP 01 </h4>
           </div>
       </a>    
         </div>
@@ -510,7 +510,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <a href="your_link_here">
           <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
       </a> 
+      <a href="YOUR_URL_HERE">
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
+    </a>    
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.  </p>
       </div>
       <div class="verticle-line-news"></div>
@@ -536,7 +538,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <a href="your_link_here">
           <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
       </a> 
+      <a href="YOUR_URL_HERE">
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
+    </a>    
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.</p>
       </div>
       <div class="verticle-line-news"></div>
@@ -560,7 +564,9 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
         <a href="your_link_here">
           <img src="assets/images/medianews-imgs.jpeg" alt="News 1" class="img-fluid news-image" data-aos="fade-up" data-aos-duration="600">
       </a> 
+      <a href="YOUR_URL_HERE">
         <h3 data-aos="fade-up" data-aos-duration="900">Lorem ipsum dolor sit amet consectetur.</h3>
+    </a>    
         <p data-aos="fade-up" data-aos-duration="1200">Lorem ipsum dolor sit amet consectetur. Sed id morbi arcu nisi lacus aliquet a.</p>
       </div>
       <div class="verticle-line-news"></div>
