--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
 
 <head>
 
@@ -427,20 +427,19 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   </div>
  
   
-
   
 
 
 <!-- Pagination -->
 <div class="container-fluid p-100">
-  <div class="pagination-container mt-4">
+  <div class="pagination-container mt-4" dir="rtl">
     <nav aria-label="Page navigation" class="w-100">
       <ul class="pagination justify-content-between mx-auto">
         <li class="page-item previous disabled">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
-                <span class="pagination-word-left left">Previous</span>
-            </a>
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
+            <span class="pagination-word-left left">Previous</span>
+          </a>
         </li>
         
         <li class="page-item ">
