--- a/PodcastMagazine.html
+++ b/PodcastMagazine.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" dir="rtl" >
 
 <head>
 
@@ -434,7 +434,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="container-fluid p-100">
   <div class="pagination-container mt-4" dir="rtl">
     <nav aria-label="Page navigation" class="w-100">
-      <ul class="pagination justify-content-between mx-auto">
+      <ul class="pagination justify-content-between mx-auto"style="flex-direction: row-reverse;" >
         <li class="page-item previous disabled">
           <a class="page-link" href="#" aria-label="Previous">
             <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
@@ -475,6 +475,51 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
   </div>
 </div>
 
+
+
+<!-- Pagination -->
+<div class="container-fluid p-100">
+  <div class="pagination-container mt-4" dir="rtl">
+    <nav aria-label="Page navigation" class="w-100">
+      <ul class="pagination justify-content-between mx-auto" style="flex-direction: row-reverse;">
+        <li class="page-item next active">
+          <a class="page-link" href="#" aria-label="Next">
+            <span aria-hidden="true"></span>
+            <span class="pagination-word-right right ">Next</span>
+            <i class="fa-solid fa-arrow-right"></i>
+          </a>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">10</a>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">9</a>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">8</a>
+        </li>
+        <li class="page-item disabled">
+          <span class="number">...</span>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">3</a>
+        </li>
+        <li class="page-item">
+          <a class="number" href="#">2</a>
+        </li>
+        <li class="page-item ">
+          <a class="number " href="#">1</a>
+        </li>
+        <li class="page-item previous disabled">
+          <a class="page-link" href="#" aria-label="Previous">
+            <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
+            <span class="pagination-word-left left">Previous</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+</div>
 
 
 
@@ -666,7 +711,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
 <div class="container-fluid p-100">
   <div class="pagination-container mt-4">
     <nav aria-label="Page navigation" class="w-100">
-      <ul class="pagination justify-content-between mx-auto">
+      <ul class="pagination justify-content-between mx-auto" >
         <li class="page-item previous">
           <a class="page-link" href="#" aria-label="Previous">
             <span aria-hidden="true"><i class="fa-solid fa-arrow-left"></i></span>
@@ -692,6 +737,11 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
     </nav>
   </div>
 </div>
+
+
+
+
+
 
   
   <div class="verticle-line-news" style="margin-top: 70px;" ></div>
