--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@ crossorigin="anonymous" referrerpolicy="no-referrer" />
                         <div class="contact-icons">
                             <img src="assets/images/location-svg.svg" data-aos="fade-up" data-aos-duration="1000" alt="Image" >
                         </div>
-                        <div class="contact-info">
+                        <div class="contact-info" data-aos="fade-up" data-aos-duration="1000">
                             <h3 data-aos="fade-up" data-aos-duration="1000">Address</h3>
                             <p data-aos="fade-up" data-aos-duration="1000">12 G Ahmed Kamel St., from Lasilky St.<br> Maadi, Cairo, Egypt 5th floor </p>
                             <h5 data-aos="fade-up" data-aos-duration="1000">Get Direction</h5>
